# ellips

./: CMakeLists.txt  README.md  vite.config.ts
benchmarks/gpu/: BenchGpuSearch.cpp
bindings/python/: elips_python.cpp  test.py
bindings/python/elips/: __init__.py  _core.pyi  errors.py  modern.py
docs/: architecture.md  cookbook.md  cpp_sdk.md  python_sdk.md  storage.md
docs/api/cpp/: index.md
docs/api/python/: index.md
docs/architecture/: faiss-gpu-acceleration-design.md  gpu-device-reporting-audit.md  gpu-runtime-stability-audit.md  runtime-flow.md
docs/cpp/api-reference/: config.md  domain-types.md  elips-instance.md  filter.md  transaction.md  vault.md
docs/cpp/architecture/: layers.md
docs/cpp/getting-started/: installation.md  quickstart.md
docs/cpp/internals/: index-engine.md  metrics-engine.md  query-engine.md  storage-engine.md
docs/cpp/performance/: benchmarking.md  memory-model.md
docs/developer-guide/: coding-standards.md  contributing.md  debugging.md  release-process.md  testing.md
docs/overview/: architecture.md  design-principles.md  introduction.md  project-history.md
docs/python/api-reference/: config-and-enums.md  database.md  vault.md
docs/python/architecture/: package-structure.md
docs/python/bindings/: pybind11-architecture.md
docs/python/getting-started/: installation.md  quickstart.md
docs/python/typing/: type-stubs.md
elips_docs/src/routes/: chat.tsx
examples/cpp/: 01_getting_started.cpp
examples/python/: 01_getting_started.py
include/elips/: Config.hpp  elips.hpp
include/elips/domain/: Record.hpp  SearchResult.hpp
include/elips/gpu_engine/: GpuBruteForceIndex.hpp  GpuDeviceManager.hpp  GpuGraphIndex.hpp  GpuIndexPort.hpp  GpuIngestionPipeline.hpp  GpuKernelPort.hpp  GpuMemoryManager.hpp  GpuMemoryPool.hpp  GpuMemoryPort.hpp  GpuPort.hpp  GpuQuantizationPipeline.hpp  GpuSearchPipeline.hpp  GpuSelector.hpp  GpuStreamPort.hpp
include/elips/index_engine/: IndexFactory.hpp
include/elips/kernel/: LockManager.hpp
include/elips/metadata/: Filter.hpp  MetadataIndex.hpp
include/elips/storage/: Serialization.hpp  WAL.hpp
include/elips/text_engine/: TextEmbedderPort.hpp
public/: robots.txt
src/: Database.cpp  Filter.cpp  IndexFactory.cpp  LockManager.cpp  MetadataIndex.cpp  QueryExecutor.cpp  WAL.cpp
src/components/: SketchDiagram.tsx
src/gpu_engine/: CMakeLists.txt  DynamicBatcher.cpp  GpuBruteForceIndex.cpp  GpuDeviceManager.cpp  GpuGraphIndex.cpp  GpuHybridIndex.cpp  GpuIVFFlatIndex.cpp  GpuIVFPQIndex.cpp  GpuIngestionPipeline.cpp  GpuMemoryManager.cpp  GpuMemoryPool.cpp  GpuProfiler.cpp  GpuQuantizationPipeline.cpp  GpuSearchPipeline.cpp  GpuSelector.cpp
src/gpu_engine/backends/cuda/: CMakeLists.txt  CudaBackend.hpp
src/gpu_engine/backends/hip/: CMakeLists.txt  HipBackend.hpp
src/gpu_engine/backends/metal/: CMakeLists.txt  MetalBackend.hpp  MetalBackend.mm
src/gpu_engine/backends/sycl/: CMakeLists.txt  SyclBackend.cpp  SyclBackend.hpp
src/gpu_engine/backends/sycl/kernels/: cosine_fp32.cpp
src/gpu_engine/backends/vulkan/: CMakeLists.txt  VulkanBackend.hpp
src/routes/: changelog.tsx  chat.tsx  community.tsx  contact.tsx  contributing.tsx  cookies.tsx  docs.api.tsx  docs.architecture.tsx  docs.cli.tsx  docs.configuration.tsx  docs.core-concepts.tsx  docs.cpp-sdk.tsx  docs.eql.tsx  docs.gpu-engine.tsx  docs.index.tsx  docs.installation.tsx  docs.project-history.tsx  docs.python-sdk.tsx  faq.tsx  help.tsx  index.tsx  privacy.tsx  sitemap[.]xml.ts  terms.tsx
src/routes/api/: chat.ts
tests/integration/: roundtrip_test.cpp
tests/integration/gpu/: DatabaseGpuLifecycleProbe.cpp  MetalBackendTest.cpp
tests/python/: test_bindings.py
tests/unit/gpu/: DynamicBatcherTest.cpp  GpuBruteForceIndexTest.cpp  GpuDeviceManagerTest.cpp  GpuMemoryManagerTest.cpp
